<resources>
    <string name="app_name">OGG</string>

    <!-- ───────────────────────── 전체 UI ───────────────────────── -->
    <!-- 페이지 제목 -->
    <string name="title_env">환경</string>
    <string name="title_myactivity">활동</string>
    <string name="title_indicators">통계</string>
    <string name="title_feed">피드</string>
    <string name="title_settings">설정</string>
    <string name="title_collections">배지</string>

    <!-- ───────────────────────── 개별 페이지 ───────────────────────── -->
    <!-- 환경 -->
    <string name="button_project">21일 프로젝트 시작하기</string>

    <!-- 활동 -->
    <string name="title_layout_myactivity_first">프로젝트 시작 전</string>
    <string name="title_layout_myactivity_second">오늘의 활동</string>
    <string name="number_21">숫자</string>
    <string name="activity_end">완료</string>
    <string name="c_reduction">탄소감축량</string>

    <!-- 인증 -->
    <string name="confirmation">인증하기</string>


    <!-- 통계 -->

    <!-- 피드 -->

    <!-- CameraX -->
    <string name="take_photo">사진 찍기</string>
    <string name="retake_photo">다시 촬영</string>
    <string name="use_photo">인증 올리기</string>


    <!-- 앨범 -->

    <!-- db test용 -->
    <string name="add_string">추가</string>
    <string name="hint_string">내용</string>
    <string name="button_save">저장</string>
    <string name="empty_not_saved">비어있어서 안 저장</string>
    <string name="user_name">김하루</string>
    <string name="activity_post_title">인증하기</string>

</resources>