<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_env"
        android:icon="@drawable/ic_baseline_grass_24"
        android:title="@string/title_env" />

    <item
        android:id="@+id/navigation_myactivity"
        android:icon="@drawable/ic_baseline_library_add_check_24"
        android:title="@string/title_myactivity" />

<!--    <item-->
<!--        android:id="@+id/placeholder"-->
<!--        android:title="" />-->

    <item
        android:id="@+id/navigation_indicators"
        android:icon="@drawable/ic_baseline_insert_chart_outlined_24"
        android:title="@string/title_indicators" />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/title_feed" />

</menu>