<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/postLayout"
    android:background="@android:color/transparent"
    tools:context=".ui.myactivity.post.PostActivity">

        <!-- 데이터 바인딩 구현하기 : https://developer.android.com/codelabs/android-databinding#2
             1. xml파일에서 데이터 바인딩 레이아웃으로 변환
              -> 레이아웃을 태그로 <layout> 래핑
              -> 레이아웃 변수 추가 : <data> </data>
              -> 레이아웃 표현식 추가 : @{ }
                (예시)
               * android:text="@{String.valueOf(index+1)}"
               * android:visibility="@{age < 13 ? View.GONE : View.VISIBLE}"
               * android:transitionName='@{"image_" + id}'
               * android:text="@{viewmodel.name}"
               * android:="@{viewmodel.nameVisible}"
               * android:="@{viewmldel.onLike()}"

               <data>
                <variable name="title" type="String" />
            </data>
            -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="317dp"
        android:layout_height="560dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="17dp"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">




        <LinearLayout
            android:layout_width="317dp"
            android:layout_height="560dp"
            android:background="@drawable/box_white"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/big_padding"

                >
                <TextView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"

                    />

                <TextView
                    android:id="@+id/post_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="인증하기"
                    android:textColor="@color/gray"
                    android:fontFamily="@font/nanumsquare_eb"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"

                    />

            <ImageButton
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:maxHeight="45dp"
                android:minHeight="45dp"
                android:layout_gravity="right"
                android:src="@drawable/baseline_close_24"/>


            </LinearLayout>



            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:maxLines="1"
                android:text="냉장고 적정용량 유지하기"
                android:textSize="20sp"
                android:fontFamily="@font/nanumsquare_eb"
                android:textColor="@color/black"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="20dp"
                >

                <TextView
                    android:id="@+id/tv_co2_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="탄소감축량"
                    android:textSize="15sp"
                    android:textColor="@color/Primary_blue"
                    android:fontFamily="@font/nanumsquare_eb" />

                <TextView
                    android:id="@+id/tv_co2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/Primary_blue"
                    android:fontFamily="@font/nanumsquare_b"
                    android:gravity="center"
                    android:text="0.38kg"
                    android:textSize="15sp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="@dimen/small_padding"
                >

            <ImageView
                android:id="@+id/img_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:maxHeight="150dp"
                android:src="@drawable/baseline_add_photo_alternate_24"
                />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:background="@drawable/corner_on"
                    android:layout_gravity="center"
                    />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="@dimen/small_padding"
                android:layout_marginBottom="@dimen/small_padding"
                android:gravity="center"
                android:maxLines="1"
                android:text="인증 가능 횟수"
                android:textSize="17sp"
                android:fontFamily="@font/nanumsquare_eb"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_content_freq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:gravity="center"
                android:text="하루에 한번"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/small_padding"
                android:gravity="center"
                android:maxLines="1"
                android:text="인증 가능 미션"
                android:textSize="17sp"
                android:fontFamily="@font/nanumsquare_eb"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_content_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="@dimen/small_padding"
                android:gravity="center"
                android:text="어쩌구저쩌구 \n이러쿵저러쿵 \n블라블라 \n요리조리"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/box_disabled"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="앨범 업로드"
                    android:layout_marginRight="12dp"

                    android:fontFamily="@font/nanumsquare_b"
                    android:textColor="@color/lightgray"
                    android:enabled="false"
                    android:visibility="gone"/>




                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/box_mainblue"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="카메라 촬영"
                    android:textColor="@color/white"
                    android:fontFamily="@font/nanumsquare_b" />


            </LinearLayout>


        </LinearLayout>
        <FrameLayout
            android:id="@+id/previewLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="90dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@color/white">

                <androidx.cardview.widget.CardView
                    android:layout_width="250dp"
                    android:layout_height="320dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">

                    <ImageView
                        android:id="@+id/image_preview"
                        android:layout_width="230dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/frame_post_corner" />

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_retake"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_skyblue"
                        android:layout_gravity="bottom"
                        android:text="@string/retake_photo"
                        android:textColor="@color/white"
                        android:fontFamily="@font/nanumsquare_b" />

                   <TextView
                       android:layout_width="16dp"
                       android:layout_height="match_parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_post"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/box_lineblue"
                        android:layout_gravity="bottom"
                        android:text="@string/use_photo"
                        android:fontFamily="@font/nanumsquare_b"
                        android:textColor="@color/Primary_blue" />

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>